--- a/estilo/style.css
+++ b/estilo/style.css
@@ -48,7 +48,7 @@ header{
     padding-left: 10px;
     margin: auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
-    margin-bottom: 30px;
+    padding-bottom: 50px;
 
  }
 header > h1 {
